<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/sign_up_coordinate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_login_til"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/sign_in_top_margin"
                    android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                    android:layout_marginStart="@dimen/fragment_horizontal_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <EditText
                        android:id="@+id/sign_up_login_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_login"
                        android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_email_til"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/fragment_vertical_margin"
                    android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                    android:layout_marginStart="@dimen/fragment_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_login_til"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <EditText
                        android:id="@+id/sign_up_email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_password_til"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/fragment_vertical_margin"
                    android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                    android:layout_marginStart="@dimen/fragment_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_email_til"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <EditText
                        android:id="@+id/sign_up_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_repeat_password_til"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/fragment_vertical_margin"
                    android:layout_marginEnd="@dimen/fragment_horizontal_margin"
                    android:layout_marginStart="@dimen/fragment_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_password_til"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <EditText
                        android:id="@+id/sign_up_repeat_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_repeat_password"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"
                    android:layout_marginTop="@dimen/sign_in_button_top_margin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_repeat_password_til"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>
