<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".signin.SignInActivity">

    <ProgressBar
            android:id="@+id/sign_in_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:indeterminateTint="@color/colorAccent"
            android:paddingTop="-4dp"
            android:visibility="gone"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    <FrameLayout
            android:id="@+id/sign_in_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
</FrameLayout>
