<resources>
    <string name="app_name">Travel</string>

    <string name="title_empty_trips">Add trip to see them</string>
    <string name="title_empty_users">There are no users</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="action_delete">Delete</string>

    <!-- user -->
    <string name="action_save_user">Save</string>

    <string name="hint_user_login">@string/username</string>
    <string name="hint_user_email">@string/email</string>
    <string name="hint_user_password">@string/password</string>

    <string name="msg_user_update_success">User was updated</string>
    <string name="msg_user_create_success">User was created</string>
    <string name="msg_user_delete_success">User was deleted</string>

    <string name="user_role_admin">Admin</string>
    <string name="user_role_manager">Manager</string>
    <string name="user_role_regular">Regular</string>


    <!-- users -->
    <string name="user_role_abbreviation_admin">A</string>
    <string name="user_role_abbreviation_manager">M</string>
    <string name="user_role_abbreviation_regular">R</string>


    <!-- trip -->
    <string name="action_trip_save">Save</string>
    <string name="action_trip_new_user">New</string>
    <string name="action_trip_start_date">Start date</string>
    <string name="action_trip_end_date">End date</string>

    <string name="title_trip_destination">Destination</string>
    <string name="title_trip_comment">Comment</string>

    <string name="err_empty_destination">Destination can\'t be empty</string>
    <string name="err_empty_start_date">Please pick trip start date</string>
    <string name="err_empty_end_date">Please pick trip end date</string>

    <string name="msg_trip_update_success">Trip was updated</string>
    <string name="msg_trip_create_success">Trip was created</string>
    <string name="msg_trip_delete_success">Trip was deleted</string>


    <!-- Sign up -->
    <string name="action_log_in">Log in</string>
    <string name="action_create_account">Create account</string>
    <string name="action_sign_up">Sign up</string>

    <string name="hint_login">@string/username</string>
    <string name="hint_email">@string/email</string>
    <string name="hint_password">@string/password</string>
    <string name="hint_repeat_password">Repeat password</string>

    <string name="err_empty_login">Please enter username</string>
    <string name="err_empty_email">Please enter email</string>
    <string name="err_empty_password">Please enter password</string>
    <string name="err_empty_repeat_password">Please repeat password</string>
    <string name="err_incorrect_email">Incorrect email</string>
    <string name="err_incorrect_password">Incorrect password</string>
    <string name="err_passwords_do_not_match">Password don\'t match</string>


    <!-- Main screen titles -->
    <string name="title_trip">Trip</string>
    <string name="title_users">Users</string>
    <string name="title_trips">Trips</string>
    <string name="title_user">User</string>


    <!-- drawer items -->
    <string name="action_logout">Logout</string>
    <string name="action_trips">Trips</string>
    <string name="actions_users">Users</string>

    <!-- trips -->
    <string name="action_search">Search</string>
    <string name="action_trips_next_month">Next month</string>

    <string name="content_description_destination">Destination</string>

    <plurals name="number_of_days_left">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
</resources>
