...
                    android:layout_marginStart="@dimen/fragment_horizontal_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <EditText
                        android:id="@+id/login_username_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_login"
                        android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

...
                    android:layout_marginStart="@dimen/fragment_horizontal_margin"
                    app:layout_constraintTop_toBottomOf="@+id/login_username_til"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <EditText
                        android:id="@+id/login_password_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

...
